# pizzatron

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: seed_db_with_dummy_data.py  test_chef_image_generation.py  test_pizza_review.py
src/: __init__.py  ai.py  app.py  db.py
src/prompts/: chef_image.txt  chef_image_best.txt  pizza_review_system_prompt.txt
src/static/: style.css
src/templates/: base.html  chef_detail.html  create_chef.html  error.html  index.html  leaderboard.html  pizza_detail.html  submit_pizza.html
