[project]
name = "pizzatron"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=1.4.0,<2.0.0",
    "python-dotenv>=0.19.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."